tests/machine/x/kotlin/group_by_conditional_sum.kt
// Generated by Mochi compiler v0.10.28 on 2025-07-18T07:10:41Z
data class Item(var cat: String, var `val`: Int, var flag: Boolean)

fun sum(list: List<Any?>): Number {
    var s = 0.0
    var allInt = true
    for (n in list) {
        val d = toDouble(n)
        if (d % 1.0 != 0.0) allInt = false
        s += d
    }
    return if (allInt) s.toInt() else s
}

fun toDouble(v: Any?): Double = when (v) {
    is Double -> v
    is Int -> v.toDouble()
    is String -> v.toDouble()
    else -> 0.0
}

class Group<K, T>(val key: K, val items: MutableList<T>) : MutableList<T> by items
// Code generated from group_by_conditional_sum.mochi

val items = mutableListOf(Item(cat = "a", `val` = 10, flag = true), Item(cat = "a", `val` = 5, flag = false), Item(cat = "b", `val` = 20, flag = true))

val result = run {
    val __groups = mutableMapOf<String, Group<String, Item>>()
    val __order = mutableListOf<String>()
    for (i in items) {
        val __k = i.cat
        var __g = __groups[__k]
        if (__g == null) {
            __g = Group(__k, mutableListOf<Item>())
            __groups[__k] = __g
            __order.add(__k)
        }
        __g.add(i)
    }
    __order.sortBy { k ->
        val g = __groups[k]!!
        g.key as String
    }
    val __res = mutableListOf<MutableMap<String, Any?>>()
    for (k in __order) {
        val g = __groups[k]!!
        __res.add((mutableMapOf("cat" to (g.key), "share" to (sum(run {
    val __res = mutableListOf<Int>()
    for (x in g) {
        __res.add(if (x.flag) x.`val` else 0)
    }
    __res
}) / sum(run {
    val __res = mutableListOf<Int>()
    for (x in g) {
        __res.add(x.`val`)
    }
    __res
}))) as MutableMap<String, Any?>))
    }
    __res
}

fun main() {
    println(result)
}
